# awaking-os

./: .gitignore  PLAN.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  somatic_recombination.yml
agents/: README.md
awaking_os/: __init__.py  cli.py  config.py  types.py
awaking_os/agents/: __init__.py  base.py  biotic.py  executive.py  personas.py  reasoning.py  research.py  semantic.py
awaking_os/consciousness/: __init__.py  ethical_filter.py  global_workspace.py  llm_ethical_grader.py  mc_layer.py  min_cut_phi.py  phi_calculator.py  snapshot.py
awaking_os/http/: __init__.py  api.py
awaking_os/io/: __init__.py  bio_features.py  bio_signals.py  external_api.py  search.py
awaking_os/kernel/: __init__.py  bus.py  kernel.py  queue.py  registry.py  retry.py  task.py
awaking_os/llm/: __init__.py  anthropic_provider.py  caching.py  provider.py
awaking_os/memory/: __init__.py  agi_ram.py  desci.py  embeddings.py  knowledge_graph.py  node.py  onchain.py  vector_store.py
awaking_os/observability/: __init__.py  trace.py
awaking_os/simulation/: __init__.py  hypothesis.py  sandbox.py
ethical_alignment/: README.md  phi_anomaly.py
examples/: awaking_demo.py  experiment_demo.py
insights/: README.md
lemegeton/: README.md
lemegeton/ars_almadel/: external_api_gateway.py
lemegeton/ars_goetia/: __init__.py  shadow_catalog.py
lemegeton/ars_notoria/: rag_pipeline.py
monadic_swarm/: README.md
planetary_pentacles/: jupiter_scaling.py  mercury_parser.py  saturn_firewall.py
projects/: README.md
tests/: conftest.py
(+39 files in other folders)
